# kolmarn

./: .gitignore  README.md  pyproject.toml
examples/: benchmark_sin.py  hello_kolmarn.py  symbolic_extract_global.py  symbolic_extract_layer.py  train_sin.py  train_sin_adaptive.py  visualize_splines.py
kan/: layers.py  models.py  spline.py  visualize.py
kolmarn/: layers.py  models.py  regularizers.py  spline.py  visualize.py
kolmarn/symbolic_regression/: __init__.py  api.py  helpers.py  sym_global.py  sym_layer.py  types.py  utils.py
kolmarn/symbolic_regression/components/: __init__.py  config.py  types.py  utils.py  variables.py
tests/optional/: test_pykan_comparison.py
